--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "description": "Pilot Academy Workshop: React.js",
   "main": "src/app.js",
   "scripts": {
-    "test":  "echo \"Error no test specified\" && exit 1",
+    "test": "echo \"Error no test specified\" && exit 1",
     "start": "http-server dist --silent",
     "watch": "npm start & watchify . -o dist/app.js --verbose --debug --extension .jsx"
   },
   "author": "Przemysław Szyszka",
   "license": "ISC",
-  "dependencies": {
-    "browserify": "^10.1.3"
+  "browserify": {
+    "transform": [
+      "reactify"
+    ]
   },
+  "dependencies": {},
   "devDependencies": {
+    "browserify": "^10.1.3",
     "http-server": "^0.8.0",
+    "react": "^0.13.3",
+    "reactify": "^1.1.1",
     "watchify": "^3.2.1"
   }
 }
