--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "src/app.jsx",
   "scripts": {
     "test": "echo \"Error no test specified\" && exit 1",
-    "start": "http-server dist --silent",
-    "build": "browserify src/app.jsx -o build/main.js --extension .jsx"
+    "start": "http-server dist --silent"
   },
   "author": "Przemysław Szyszka",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/przemekszyszka/react-app.git"
+  },
   "license": "ISC",
   "browserify": {
     "transform": [
