--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "browserify": "^10.1.3",
     "gulp": "^3.8.11",
     "gulp-livereload": "^3.8.0",
+    "gulp-notify": "^2.2.0",
     "http-server": "^0.8.0",
     "react": "^0.13.3",
     "reactify": "^1.1.1",
