#5 - Add react router

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "http-server": "^0.8.0",
     "jquery": "^2.1.4",
     "react": "^0.13.3",
+    "react-router": "^0.13.3",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
