--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.jsx",
   "scripts": {
     "test": "echo \"Error no test specified\" && exit 1",
-    "start": "http-server dist --silent"
+    "start": "http-server dist --silent",
+    "postinstall": "gulp build"
   },
   "author": "Przemysław Szyszka",
   "repository": {
@@ -18,19 +19,23 @@
       "reactify"
     ]
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "babelify": "^6.1.0",
     "browserify": "^10.1.3",
     "gulp": "^3.8.11",
     "gulp-livereload": "^3.8.0",
     "gulp-notify": "^2.2.0",
-    "http-server": "^0.8.0",
     "jquery": "^2.1.4",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
-    "vinyl-source-stream": "^1.1.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "http-server": "^0.8.0",
     "watchify": "^3.2.1"
+  },
+  "engines": {
+    "node": "0.10.x"
   }
 }
